syntax = "proto2";
option optimize_for = LITE_RUNTIME;

package NFdbBase;

import "common.base.Token.proto";

enum FdbTraceLogLevel
{
    FDB_LL_VERBOSE              = 0;
    FDB_LL_DEBUG                = 1;
    FDB_LL_INFO                 = 2;
    FDB_LL_WARNING              = 3;
    FDB_LL_ERROR                = 4;
    FDB_LL_FATAL                = 5;
    FDB_LL_SILENT               = 6;
}

enum FdbMessageLoggerCode
{
    REQ_FDBUS_LOG               = 0;
    REQ_TRACE_LOG               = 1;

    REQ_LOGGER_CONFIG           = 2;
    REQ_TRACE_CONFIG            = 3;

    NTF_LOGGER_CONFIG           = 4;
    NTF_TRACE_CONFIG            = 5;

    NTF_FDBUS_LOG               = 6;
    NTF_TRACE_LOG               = 7;
} 

message FdbMsgErrorInfo
{
    required int32 error_code = 1;
    optional string description = 2;
}

message FdbMsgLogConfig
{
    required bool global_enable = 1;
    required bool enable_request = 2;
    required bool enable_reply = 3;
    required bool enable_broadcast = 4;
    required bool enable_subscribe = 5;
    required int32 raw_data_clipping_size = 6;

    repeated string host_white_list = 7;
    repeated string endpoint_white_list = 8;
    repeated string busname_white_list = 9;
}

message FdbTraceConfig
{
    required bool global_enable = 1;
    required FdbTraceLogLevel log_level = 2;

    repeated string host_white_list = 7;
    repeated string tag_white_list = 8;
    repeated string busname_white_list = 9;
}

message FdbAuthentication
{
    optional FdbMsgTokens token_list = 1;
}
